# roboteers-utilsNolan

./: .cproject  .gitignore  .project  CMakeLists.txt
include/: AnalogJoystickButton.h  CTREMagEncoder.h  ComboJoystickButton.h  GrayhillEncoder.h  Interpolate.h  Joystick2481.h  MotorPositionController.h  MotorVelocityController.h  PIDVAController.h  POVJoystickButton.h  PathGenerator.h  Pose.h  Pose2D.h  RigidTransform2D.h  Rotation2D.h  TankDriveKinematics.h  TankDrivePathGenerator.h  TankDrivePose.h  TankDrivetrain.h  TrajectoryGenerator1D.h  Translation2D.h  XboxController.h
other/: 1DTrajectoryGeneratorFinalPath.csv  AutoPathFollower.txt  FeatureRequests.txt  PathGeneratorFinalPath.csv  PathGeneratorWaypoints.csv  PlotPathGeneratorFinalPath.py  PlotPathGeneratorWaypoints.py  TrajectoryGenerator1DWaypoints.csv  tempFinalPath.csv  tempWaypoints.csv
src/: AnalogJoystickButton.cpp  CTREMagEncoder.cpp  OI.cpp  (+27 more)
src/Utils/: CMakeLists.txt  Interpolate.cpp  Interpolate.h  MotorPositionController.cpp  MotorPositionController.h  MotorVelocityController.cpp  MotorVelocityController.h  NormalizeToRange.cpp  NormalizeToRange.h  PIDVAController.cpp  PIDVAController.h  PoseDot2D.cpp  PoseDot2D.h  Rotation2D.cpp  Rotation2D.h  SwerveDriveKinematics.cpp  SwerveDriveKinematics.h  SwerveDrivePathGenerator.cpp  SwerveDrivePose.cpp  SwerveDrivePose.h  TankDriveKinematics.cpp  TankDriveKinematics.h  TankDrivePathGenerator.cpp  TankDrivePathGenerator.h  TankDrivePose.cpp  TankDrivePose.h  TrajectoryGenerator1D.cpp  TrajectoryGenerator1D.h  Translation2D.cpp  Translation2D.h  main.cpp
(+186 files in other folders)
